# hello-world

./: .dockerignore  .env.example  .gitignore  ANALYSIS.md  CNAME  Dockerfile  Makefile  README.md  WIP-DEPTH-PLAN.md  about.html  astro.config.mjs  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  script.js  styles.css  work.html
abacus/: __init__.py  analyst.py  cli.py  engine.js  engine.py  generate.py  goldens.py  index.html  onboarding.js  parser.py  semantics.py
abacus/data/: goldens.json  manifest.json
abacus/proto/: console.html  crew.js  dashboard.html  index.html  studio.html  viz.js
armada/: index.html
armada/fixtures/: clean-day.json  degradation-drill.json
atlas/: __init__.py  api.py  atlas-data.json  atlas-manifest.json  cache.py  chunking.py  cli.py  config.py  corpus.py  data-cascadia-distribution-co.json  data-meridian-platform-ops.json  embeddings.py  engine.js  export.py  index.html  llm.py  pipeline.py  schema.py  state.py  store.py
atlas/ui/: engine.js  index.html
churn/: __init__.py  charts.py  cli.py  data.py  index.html  model.json  provenance.json  rows.json  train.py
conductor/: __init__.py  agent.py  cli.py  index.html  pipeline.py  signatures.py  warehouse.py
conductor/sessions/: dup-load.json  null-join.json  rollback-drill.json  schema-drift.json
conductor/ui/: index.html
corpus/: samples.yaml
corpus-supply/: samples.yaml  system-state.yaml
corpus-supply/data/: freight-rates.csv  freight-rates.csv.md  inventory-levels.csv  order-history-2024.csv.md  shipments-2024.csv  sku-catalog.csv.md  supplier-scorecard.csv.md
corpus-supply/incidents/: 2024-09-port-congestion.md
corpus-supply/references/: master-carrier-agreement.pdf.md
corpus-supply/runbooks/: cycle-count-procedure.md  product-recall-procedure.md  receiving-dock-sop.md
corpus/data/: capacity-costs-2024.csv  capacity-costs-2024.csv.md  deploy-log-2024.csv
corpus/diagrams/: deploy-pipeline.png.md
corpus/incidents/: inc-2408-war-room-transcript.md
cue/: index.html
forge/: index.html
helmsman/: __init__.py  cli.py  index.html  kube.py  llm.py  pipeline.py  signatures.py
operator/: index.html
ops/: system-state.yaml
oracle/: __init__.py  cli.py  council.py  index.html  models.py
public/: robots.txt  script.js
pulse/: __init__.py  brief.py  cli.py  feeds.py  index.html
shared/: pixel.css
tests/: conftest.py  test_abacus.py  test_api.py  test_cache.py  test_churn.py  test_conductor.py  test_corpus_and_chunking.py  test_embeddings_and_store.py  test_formats.py  test_helmsman.py  test_oracle.py  test_pipeline.py  test_pulse.py  test_state.py
(+99 files in other folders)
