[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oracle-council"
version = "0.1.0"
description = "Oracle — a council of debating AI agents on different frontier models; confidence scored from where they disagree."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Huy Nguyen" }]
dependencies = [
    "langgraph>=0.2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Install the providers you hold keys for; any subset works.
# (xAI/Grok rides the openai SDK against api.x.ai — no extra package.)
providers = [
    "anthropic>=0.40",
    "openai>=1.40",
    "groq>=0.11",
    "google-genai>=1.0",
]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
oracle = "oracle.cli:main"

[tool.setuptools]
packages = ["oracle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
